[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Salik Syed <ssyed@cs.stanford.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
graphene = "^3.3"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
